forgot passsword service refactored

--- a/views/mail/styles.ejs
+++ b/views/mail/styles.ejs
@@ -22,7 +22,7 @@
   }
   .errorDesc > p:first-child,
   .desc > p:first-child {
-    width: 150px;
+    flex-shrink: 0;
   }
   .errorDesc > p:last-child,
   .desc > p:last-child {
