--- a/views/otp/otpTemplate.ejs
+++ b/views/otp/otpTemplate.ejs
@@ -24,8 +24,8 @@
         </div>
         <p style="font-size: 1.1em">Hi <%= name %>,</p>
         <p>
-          Thank you for choosing Msgbits. Use the following OTP to complete your Sign Up procedures.
-          OTP is valid for 5 minutes
+          Thank you for choosing Msgbits. Use the following OTP to complete your verification
+          procedures. OTP is valid for 5 minutes
         </p>
         <h2
           style="
